# tictactoe-cli

./: .gitignore  .mise.toml  README.md  pyproject.toml  ttt.py
.github/: requirements.txt
.github/workflows/: briefcase-publish.yml
src/tictactoe/: cli.py
