[project]
name = "TicTacToe"
version = "0.0.1"
authors = [
  { name="Gerrit Wielenga", email="nova@mail.infernalnova.com" },
]
description = "A tictactoe cli for Comp Sci Club"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL3 License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "black", "sphinx>=4.0", "sphinx-rtd-theme"]


[project.urls]
Homepage = "https://github.com/AEtherForge-Zero-Labs/tictactoe-cli"
Issues = "https://github.com/AEtherForge-Zero-Labs/tictactoe-cli/issues"

[project.scripts]
ttt = "tictactoe.cli:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "tictactoe"



# content below this line added by briefcase convert
# This project was generated with 0.3.20 using template: https://github.com/beeware/briefcase-template@v0.3.20
[tool.briefcase]
project_name = "Tictactoe"
bundle = "com.github.AEtherForge-Zero-Labs"
version = "0.0.1"
url = "https://github.com/AEtherForge-Zero-Labs/tictactoe-cli"
license.file = "LICENSE"
author = "Gerrit Wielenga"
author_email = "nova@mail.infernalnova.com"

[tool.briefcase.app.tictactoe]
formal_name = "Tictactoe"
description = "A tictactoe cli for Comp Sci Club"
long_description = """More details about the app should go here.
"""
sources = [
    "src/tictactoe",
]
test_sources = [
    "tests",
]

